--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -52,7 +52,7 @@ h2 {
   background-color: rgb(19, 18, 18);
 }
 
-.btn {
+button {
   background-color: rgb(19, 18, 18);
   border: 1px solid #248030;
   font-size: 1rem;
@@ -65,6 +65,14 @@ h2 {
   color: #67d375;
 }
 
+.disabled {
+  border: 1px solid #414141;
+}
+
 .btn:hover {
   border-color: #67d375
+}
+
+.inventory {
+  margin-top: 1rem;
 }
