--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -113,9 +113,15 @@ button:hover {
 
 .inventory {
   margin-top: 1rem;
-  line-height: 1.8;
+  line-height: 2;
+  display: flex;
+  flex-direction: column;
 }
 
 .term-out {
   margin-bottom: 1rem;
+}
+
+span {
+  font-family: dogicaBold, dogica Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
