--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -124,8 +124,11 @@ span {
   font-family: dogicaBold, dogica Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-@media (max-with: 500px) {
-  .btn {
-    line-height: 3;
+@media (max-width: 500px) {
+  button {
+    font-size: 0.8rem;
+  }
+  .terminal-output {
+    font-size: 0.9rem;
   }
 }
