--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -127,6 +127,7 @@ span {
 @media (max-width: 500px) {
   button {
     font-size: 0.8rem;
+    line-height: 3;
   }
   .terminal-output {
     font-size: 0.9rem;
